Fixed Issue where you could click behind the dark screen (login/register)

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -40,15 +40,20 @@ ul {
 }
 
 #darkScreen {
-	opacity: 0%;
-	transition: opacity 0.5s;
-	transition-timing-function: ease-out;
+	opacity: 70%;
 	background-color: black;
 	width: 100%; height: 100%;
 	position: absolute;
 	top: 0; left: 0;
 	z-index: 8;
-	pointer-events: none;
+	pointer-events:all;
+	animation-name: example;
+  	animation-duration: 1s;
+}
+
+@keyframes example {
+	from {opacity: 0%}
+	to {opacity: 70%}
 }
 
 #searchImg{
